syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = ".;srv";

service UserSrv {
    rpc GetUserList (PageInfo) returns (UserListResponse);//用户列表
    rpc GetUserByEmail (EmailRequest) returns (UserInfoResponse);
    rpc GetUserById (IdRequest) returns (UserInfoResponse);
    rpc CreateUser (CreateUserInfo) returns (UserInfoResponse);
    rpc UpdateUser (UpdateUserInfo) returns (google.protobuf.Empty);//更新用户

}

//分页请求
message PageInfo {
    uint32 page_no = 1;
    uint32 page_size = 2;
}

//根据邮箱查询用户请求
message EmailRequest {
    string email = 1;
}

//根据id查询用户请求
message IdRequest {
    string user_id = 2;
}

//新建用户请求
message CreateUserInfo {
    string email = 1;
    string user_name = 2;
    string password = 3;
    string code = 4;
}

//更新用户信息请求
message UpdateUserInfo {
    string user_id = 1;
    string user_name = 2;
    int32 sex = 3;
    int64 birthday = 4;
}

//用户列表响应
message UserListResponse {
    int64 total = 1;
    repeated UserInfoResponse data = 2;
}

//用户信息响应
message UserInfoResponse {
    uint64 id = 1;
    string user_id = 2;
    string password = 3;
    string email = 4;
    string user_name = 5;
    int64 birthday = 6;
    int32 sex = 7;
    int32 role = 8;
    int64 created_at = 9;
    int64 updated_at = 10;
    int64 deleted_at = 11;
}

